--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 				<a href="index.html" ><div class="logo"></div></a>
 				<ul>
 					<li>
-						<a class="shadow-hover curent-shadow" href="#" >Work</a>
-						<ul>
+						<a class="shadow-hover curent-shadow" href="#" >Home</a>
+<!-- 						<ul>
 							<li><a class="curent-multi-page" href="index.html">On-Scroll Back Shapes</a></li>
 							<li><a href="index-1.html">Title Follow Mouse</a></li>
 							<li><a href="index-2.html">Stack Motion Effect</a></li>
@@ -75,24 +75,24 @@
 							<li><a href="index-5.html">Hero Fullscreen Slider</a></li>
 							<li><a href="index-6.html">Parallax Back Effect</a></li>
 							<li><a href="index-7.html">Hero Video Player</a></li>
-						</ul>
+						</ul> -->
 					</li>
 					<li>
-						<a class="shadow-hover" href="about.html">About</a>
+						<a class="shadow-hover" href="#">Acerca</a>
 					</li>
 					<li>
-						<a class="shadow-hover" href="#">Journal</a>
-						<ul>
+						<a class="shadow-hover" href="#">Porfolio</a>
+<!-- 						<ul>
 							<li><a href="blog.html">Journal</a></li>
 							<li><a href="post.html">Single Post</a></li>
-						</ul>
+						</ul> -->
 					</li>
 					<li>
-						<a class="shadow-hover" href="contact.html">Contact</a>
+						<a class="shadow-hover" href="contact.html">Contacto</a>
 					</li>
-					<li>
+<!-- 					<li>
 						<a class="shadow-hover" href="#">Buy <span>$20</span></a>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 		</nav>
@@ -108,10 +108,12 @@
 		<div class="home-text fade-elements">
 			<div class="container">
 				<div class="twelve columns">
-					<h1 class="cd-headline letters type">Diseñamos <span class="cross-out">not</span> Creamos<span class="cross-out">average</span><br>web 
+					<h1 class="cd-headline letters type">Pampa.code es<!--  <span class="cross-out">not</span> Creamos<span class="cross-out">average</span><br>web  -->
 						<span class="cd-words-wrapper waiting">
-							<b class="is-visible">designer</b>
-							<b>developer</b>
+							<b class="is-visible">desarrollo</b>
+							<b>comunicación</b>
+							<b>marketing</b>
+							<b>diseño</b>
 						</span>
 					</h1>
 				</div>
@@ -141,7 +143,7 @@
 	<div class="section-block">
 		<div class="container">
 			<div class="twelve columns page-title">
-				<h5>what we do</h5>
+				<h5>¿que hacemos?</h5>
 			</div>
 			<div class="four columns" >
 				<div class="about-wrap">
@@ -156,8 +158,8 @@
 						<circle fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" cx="40" cy="29" r="5"/>
 						</svg>							
 					</div>
-					<h6>branding.</h6>
-					<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.</p>
+					<h6>Seo.</h6>
+					<p>Posicionamos tu sitio con toda la suite de Google</p>
 				</div>
 			</div>
 			<div class="four columns" >
@@ -180,8 +182,8 @@
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="55" y1="11" x2="63" y2="11"/>
 						</svg>							
 					</div>
-					<h6>development.</h6>
-					<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.</p>
+					<h6>desarrollo</h6>
+					<p>desarrollamos soluciones a tus problemas</p>
 				</div>
 			</div>
 			<div class="four columns" >
@@ -200,8 +202,8 @@
 						<rect x="38" y="25" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="19" height="16"/>
 						</svg>							
 					</div>
-					<h6>web design.</h6>
-					<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.</p>
+					<h6>diseño web</h6>
+					<p>diseñamos el sitio web que soñas</p>
 				</div>
 			</div>
 			<div class="clear"></div>
@@ -216,8 +218,8 @@
 							9,3.042 9,9 "/>
 						</svg>							
 					</div>
-					<h6>support.</h6>
-					<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.</p>
+					<h6>soporte</h6>
+					<p>comuinicación contaste con nuestro equipo</p>
 				</div>
 			</div>
 			<div class="four columns" >
@@ -235,8 +237,8 @@
 						</g>
 						</svg>						
 					</div>
-					<h6>film & video production.</h6>
-					<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.</p>
+					<h6>fotografía</h6>
+					<p>imágenes con calidad y estilo para tus productos</p>
 				</div>
 			</div>
 			<div class="four columns" >
@@ -255,8 +257,8 @@
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="40" y1="23" x2="35" y2="23"/>
 						</svg>					
 					</div>
-					<h6>audio recording.</h6>
-					<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.</p>
+					<h6>social media</h6>
+					<p>promocion en redes sociales</p>
 				</div>
 			</div>
 		</div>
@@ -275,13 +277,13 @@
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/1.jpg" alt="Some image" />
 				<h3 class="content__title">Ayuda en Accion</h3>
-				<a href="project1.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project1.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/2.jpg" alt="Some image" />
 				<h3 class="content__title">Invest in Heads</h3>
-				<a href="project2.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project2.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-2">
@@ -289,13 +291,13 @@
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/3.jpg" alt="Some image" />
 				<h3 class="content__title">Disrepute</h3>
-				<a href="project3.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project3.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/4.jpg" alt="Some image" />
 				<h3 class="content__title">Ottavo</h3>
-				<a href="project4.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project4.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-3">
@@ -303,13 +305,13 @@
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/5.jpg" alt="Some image" />
 				<h3 class="content__title">Lyft | First Round</h3>
-				<a href="project5.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project5.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/6.jpg" alt="Some image" />
 				<h3 class="content__title">SOMA</h3>
-				<a href="project6.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project6.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-4">
@@ -317,13 +319,13 @@
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/7.jpg" alt="Some image" />
 				<h3 class="content__title">Covestro Lab APP</h3>
-				<a href="project7.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project7.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/8.jpg" alt="Some image" />
 				<h3 class="content__title">MIMIC</h3>
-				<a href="project8.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">Discover</div></a>
+				<a href="project8.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content--related"></div>
@@ -332,14 +334,14 @@
 <!-- Who we are
 	================================================== -->
 	<div class="section-block padding-top">
-		<div class="container ">
+		<div class="container">
 			<div class="twelve columns page-title">
 				<h5>who we are</h5>
 			</div>
 			<div class="six columns">
 				<div class="team-wrap">
 					<img src="images/santi.jfif" alt="">
-					<p><small>App & Media</small></p>
+					<p><small>Fullstack Dev</small></p>
 					<h6>Santiago Corbanini</h6>
 					<div class="social-team">
 						<ul class="list-social-team">
@@ -359,7 +361,7 @@
 			<div class="six columns">
 				<div class="team-wrap">
 					<img src="images/fran.jpg" alt="">
-					<p><small>Identity building</small></p>
+					<p><small>Fron-End Dev / UX UI</small></p>
 					<h6>Franco Vanney</h6>
 					<div class="social-team">
 						<ul class="list-social-team">
@@ -383,16 +385,16 @@
 	<div class="section-block padding-top-bottom">
 		<div class="container footer">
 			<div class="one-fifth column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<p>Kratos</p>
-				<p>Web Agency</p>
+				<p>Pampa.code</p>
+				<p>Agencia de desarrollo y diseño de aplicaciones web</p>
 			</div>
 			<div class="one-fifth column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<p>1093 Flushing Ave</p>
-				<p>Brooklyn, NY</p>
+				<p>1024 St</p>
+				<p>Junín, BA</p>
 			</div>
 			<div class="one-fifth column mail-phone" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<a href="tel:256454877"><p class="chaffle" data-lang="en">+(1) 256 45 48 77</p></a>
-				<a href="mailto:kratos-office@kratos.com"><p class="chaffle" data-lang="en">kratos-office@kratos.com</p></a>
+				<a href="tel:256454877"><p class="chaffle" data-lang="en">+(54) 0303 456</p></a>
+				<a href="mailto:info@pampacode.com"><p class="chaffle" data-lang="en">info@pampacode.com</p></a>
 			</div>
 			<div class="two-fifths column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="social-footer">
