--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Kratos</title>
+	<title>Pampa.code</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta property="og:title" content="The title for your social post entry">
@@ -78,14 +78,17 @@
 						</ul> -->
 					</li>
 					<li>
-						<a class="shadow-hover" href="#">Acerca</a>
+						<a class="shadow-hover" href="#top-scroll">Acerca</a>
 					</li>
 					<li>
-						<a class="shadow-hover" href="#">Porfolio</a>
+						<a class="shadow-hover" href="#portfolio">Portfolio</a>
 <!-- 						<ul>
 							<li><a href="blog.html">Journal</a></li>
 							<li><a href="post.html">Single Post</a></li>
 						</ul> -->
+					</li>
+					<li>
+						<a class="shadow-hover" href="#nosotros">Nosotros</a>
 					</li>
 					<li>
 						<a class="shadow-hover" href="contact.html">Contacto</a>
@@ -266,7 +269,7 @@
 
 <!-- Portfolio test
 	================================================== -->
-	<div class="section-block padding-top" id="top-scroll">
+	<div class="section-block padding-top" id="portfolio">
 		<div class="container">
 			<div class="twelve columns page-title">
 				<h5>portfolio</h5>
@@ -333,10 +336,10 @@
 		
 <!-- Who we are
 	================================================== -->
-	<div class="section-block padding-top">
+	<div class="section-block padding-top" id="nosotros">
 		<div class="container">
 			<div class="twelve columns page-title">
-				<h5>who we are</h5>
+				<h5>nosotros</h5>
 			</div>
 			<div class="six columns">
 				<div class="team-wrap">
