--- a/index.html
+++ b/index.html
@@ -341,43 +341,42 @@
 			<div class="twelve columns page-title">
 				<h5>nosotros</h5>
 			</div>
-			<div class="six columns">
-				<div class="team-wrap">
-					<img src="images/santi.jfif" alt="">
-					<p><small>Fullstack Dev</small></p>
-					<h6>Santiago Corbanini</h6>
-					<div class="social-team">
-						<ul class="list-social-team">
-							<li class="icon-team tipped" data-title="twitter"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-								<a href="#"><span class="fa-twitter"></span></a>
-							</li>
-							<li class="icon-team tipped" data-title="github"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-								<a href="#"><span class="fa-github"></span></a>
-							</li>
-							<li class="icon-team tipped" data-title="pinterest"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-								<a href="#"><span class="fa-pinterest"></span></a>
-							</li>
-						</ul>	
+			<div>
+				<div class="six columns">
+					<div class="team-wrap">
+						<img src="images/santi.jfif" alt="">
+						<p><small>Fullstack Dev</small></p>
+						<h6>Santiago Corbanini</h6>
+						<div class="social-team">
+							<ul class="list-social-team">
+								<li class="icon-team tipped" data-title="instagram"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
+									<a href="https://www.instagram.com/santicorbanini/" target="_blank"><span class="fa-instagram"></span></a>
+								</li>
+								<li class="icon-team tipped" data-title="email"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
+									<a href="mailto:" target="_blank"><span class="fa-envelope"></span></a>
+								</li>
+							</ul>	
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="six columns">
-				<div class="team-wrap">
-					<img src="images/fran.jpg" alt="">
-					<p><small>Fron-End Dev / UX UI</small></p>
-					<h6>Franco Vanney</h6>
-					<div class="social-team">
-						<ul class="list-social-team">
-							<li class="icon-team tipped" data-title="twitter"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-								<a href="#"><span class="fa-twitter"></span></a>
-							</li>
-							<li class="icon-team tipped" data-title="github"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-								<a href="#"><span class="fa-github"></span></a>
-							</li>
-							<li class="icon-team tipped" data-title="pinterest"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-								<a href="#"><span class="fa-pinterest"></span></a>
-							</li>
-						</ul>	
+				<div class="six columns">
+					<div class="team-wrap">
+						<img src="images/fran.jpg" alt="">
+						<p><small>Front-End Dev / UX UI</small></p>
+						<h6>Franco Vanney</h6>
+						<div class="social-team">
+							<ul class="list-social-team">
+								<li class="icon-team tipped" data-title="instagram"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
+									<a href="https://www.instagram.com/francovanney/" target="_blank"><span class="fa-instagram"></span></a>
+								</li>
+								<li class="icon-team tipped" data-title="vimeo"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
+									<a href="https://vimeo.com/francoavanney" target="_blank"><span class="fa-vimeo"></span></a>
+								</li>
+								<li class="icon-team tipped" data-title="email"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
+									<a href="mailto:francoavanney@gmail.com" target="_blank"><span class="fa-envelope"></span></a>
+								</li>
+							</ul>	
+						</div>
 					</div>
 				</div>
 		</div>	
