--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
 		<div class="content-wrap padding-top-bottom content--layout-1">
 			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/1.jpg" alt="Some image" />
-				<h3 class="content__title">Ayuda en Accion</h3>
+				<img class="content__img" src="images/portfolio/arauzvanney.png" alt="Some image" />
+				<h3 class="content__title">Estudio Arauz Vanney</h3>
 				<a href="project1.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/2.jpg" alt="Some image" />
-				<h3 class="content__title">Invest in Heads</h3>
+				<img class="content__img" src="images/portfolio/crego.png" alt="Some image" />
+				<h3 class="content__title">La barbería de Crego</h3>
 				<a href="project2.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
