--- a/index.html
+++ b/index.html
@@ -113,10 +113,12 @@
 				<div class="twelve columns">
 					<h1 class="cd-headline letters type">Pampa.code es<!--  <span class="cross-out">not</span> Creamos<span class="cross-out">average</span><br>web  -->
 						<span class="cd-words-wrapper waiting">
-							<b class="is-visible">desarrollo</b>
+							<b class="is-visible">diseño</b>
 							<b>comunicación</b>
 							<b>marketing</b>
-							<b>diseño</b>
+							<b>desarollo</b>
+							<b>posicionamiento</b>
+							<b>tu solución</b>
 						</span>
 					</h1>
 				</div>
@@ -280,55 +282,55 @@
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/arauzvanney.png" alt="Some image" />
 				<h3 class="content__title">Estudio Arauz Vanney</h3>
-				<a href="project1.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<a href="https://estudioarauzvanney.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/crego.png" alt="Some image" />
 				<h3 class="content__title">La barbería de Crego</h3>
-				<a href="project2.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<a href="https://labarberiadecrego-prueba.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-2">
 			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/3.jpg" alt="Some image" />
-				<h3 class="content__title">Disrepute</h3>
-				<a href="project3.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/burger.png" alt="Some image" />
+				<h3 class="content__title">Burger</h3>
+				<a href="https://demo-burger.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/4.jpg" alt="Some image" />
-				<h3 class="content__title">Ottavo</h3>
-				<a href="project4.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/pets.png" alt="Some image" />
+				<h3 class="content__title">Pets</h3>
+				<a href="https://demo-pet.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-3">
 			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/5.jpg" alt="Some image" />
-				<h3 class="content__title">Lyft | First Round</h3>
-				<a href="project5.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/cafe.png" alt="Some image" />
+				<h3 class="content__title">Café</h3>
+				<a href="https://cafe-junin.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/6.jpg" alt="Some image" />
-				<h3 class="content__title">SOMA</h3>
-				<a href="project6.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/restaurante.png" alt="Some image" />
+				<h3 class="content__title">Restaurante</h3>
+				<a href="https://restaurante-junin.netlify.app/" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-4">
 			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/7.jpg" alt="Some image" />
-				<h3 class="content__title">Covestro Lab APP</h3>
-				<a href="project7.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/libros.png" alt="Some image" />
+				<h3 class="content__title">Escritor</h3>
+				<a href="https://libreria-junin.netlify.app/" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/8.jpg" alt="Some image" />
-				<h3 class="content__title">MIMIC</h3>
-				<a href="project8.html" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/chk.png" alt="Some image" />
+				<h3 class="content__title">DJ</h3>
+				<a href="https://chkjnn.netlify.app/" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content--related"></div>
