big changes colors and shadows

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	<meta property="og:description" content="Description for your link page to share in social networks. If your main description is good, use it">
 	<meta property="og:image" content="//yourdomain.com/image-name.jpg">
 	<meta property="og:type" content="website">
-
+	<link rel="icon" 
+	type="image/png" 
+	href="/images/favicon.png">
 	<!-- Mobile Specific Metas
   ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -347,7 +349,7 @@
 				<div class="six columns">
 					<div class="team-wrap">
 						<img src="images/santi.jfif" alt="">
-						<p><small>Fullstack Dev</small></p>
+						<p><small>Ing En Sistemas - Fullstack Dev</small></p>
 						<h6>Santiago Corbanini</h6>
 						<div class="social-team">
 							<ul class="list-social-team">
@@ -364,7 +366,7 @@
 				<div class="six columns">
 					<div class="team-wrap">
 						<img src="images/fran.jpg" alt="">
-						<p><small>Front-End Dev / UX UI</small></p>
+						<p><small>Front-End Dev / UX UI / Motion Graphics</small></p>
 						<h6>Franco Vanney</h6>
 						<div class="social-team">
 							<ul class="list-social-team">
