--- a/index.html
+++ b/index.html
@@ -326,13 +326,13 @@
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/libros.png" alt="Some image" />
 				<h3 class="content__title">Escritor</h3>
-				<a href="https://libreria-junin.netlify.app/" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<a href="https://libreria-junin.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/chk.png" alt="Some image" />
 				<h3 class="content__title">DJ</h3>
-				<a href="https://chkjnn.netlify.app/" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<a href="https://chkjnn.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content--related"></div>
