meta data added

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 ﻿<!DOCTYPE html>
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]>
-<!--><html class="no-js" lang="en"><!--<![endif]-->
+<!--><html class="no-js" lang="es"><!--<![endif]-->
 <head>
 
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Pampa.code</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<meta property="og:title" content="The title for your social post entry">
-	<meta property="og:url" content="//yourdomain.com/page-url">
-	<meta property="og:description" content="Description for your link page to share in social networks. If your main description is good, use it">
-	<meta property="og:image" content="//yourdomain.com/image-name.jpg">
+	<meta property="og:title" content="Pampa.code">
+	<meta property="og:url" content="https://pampacode.com/">
+	<meta property="og:description" content="Desarollo y diseño de aplicaciones web 💻">
+	<meta property="og:image" content="https://pampacode.com/images/logo-light.png">
 	<meta property="og:type" content="website">
 	<link rel="icon" 
 	type="image/png" 
