--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<a class="shadow-hover" href="#nosotros">Nosotros</a>
 					</li>
 					<li>
-						<a class="shadow-hover" href="contact.html">Contacto</a>
+						<a class="shadow-hover" href="#contact">Contacto</a>
 					</li>
 <!-- 					<li>
 						<a class="shadow-hover" href="#">Buy <span>$20</span></a>
@@ -386,34 +386,34 @@
 
 <!-- Footer
 	================================================== -->
-	<div class="section-block padding-top-bottom">
+	<div class="section-block padding-top-bottom" id="contact">
 		<div class="container footer">
 			<div class="one-fifth column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<p>Pampa.code</p>
-				<p>Agencia de desarrollo y diseño de aplicaciones web</p>
+				<p>desarrollo y diseño de aplicaciones web</p>
+				<p>pampa.code - 2021</p>
 			</div>
 			<div class="one-fifth column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<p>1024 St</p>
 				<p>Junín, BA</p>
+				<p>Argentina</p>
 			</div>
 			<div class="one-fifth column mail-phone" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<a href="tel:256454877"><p class="chaffle" data-lang="en">+(54) 0303 456</p></a>
+				<!-- <a href="tel:256454877"><p class="chaffle" data-lang="en">+(54) 0303 456</p></a> -->
 				<a href="mailto:info@pampacode.com"><p class="chaffle" data-lang="en">info@pampacode.com</p></a>
 			</div>
 			<div class="two-fifths column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="social-footer">
 					<ul class="list-social-footer">
-						<li class="icon-footer tipped" data-title="twitter"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
+<!-- 						<li class="icon-footer tipped" data-title="twitter"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
 							<a href="#"><span class="fa-twitter"></span></a>
+						</li> -->
+						<li class="icon-footer tipped" data-title="email"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
+							<a href="mailto:info@pampacode.com"><span class="fa-envelope"></span></a>
 						</li>
-						<li class="icon-footer tipped" data-title="github"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="#"><span class="fa-github"></span></a>
-						</li>
-						<li class="icon-footer tipped" data-title="pinterest"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
+<!-- 						<li class="icon-footer tipped" data-title="pinterest"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
 							<a href="#"><span class="fa-pinterest"></span></a>
 						</li>
 						<li class="icon-footer tipped" data-title="facebook"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="#"><span class="fa-facebook"></span></a>
+							<a href="#"><span class="fa-facebook"></span></a> -->
 						</li>
 					</ul>	
 				</div>
