--- a/index.html
+++ b/index.html
@@ -391,66 +391,47 @@
 		<div class="container">
 
 			<div class="twelve columns page-title">
-				<h5>Contactanos</h5>
+				<h5>contactanos</h5>
 			</div>
-			
-				<div class="container-form">
-
-					<div class="form-result"></div>
-
-					<form class="row mb-0" id="template-contactform" name="template-contactform" action="include/form.php" method="post">
-
-						<div class="form-process">
-							<div class="css3-spinner">
-								<div class="css3-spinner-scale-ripple">
-									<div></div>
-									<div></div>
-									<div></div>
-								</div>
+			<div class="container-form">
+						<form class="row" name="ajax-form" id="ajax-form" action="mail-it.php" method="post">
+							<div class="col-md-6 mb-4">
+								<label for="name"> 
+									<span class="error" id="err-name">please enter name</span>
+								</label>
+								<input name="name" id="name" type="text"   placeholder="Your Name: *"/>
 							</div>
-						</div>
-
-
-						<div class="col-md-6 mb-4">
-							<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control border-form-control required" placeholder="Nombre" />
-						</div>
-						<div class="col-md-6 mb-4">
-							<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control border-form-control" placeholder="Email" />
-						</div>
-
-						<div class="w-100"></div>
-
-						<div class="col-md-4 mb-4">
-							<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control border-form-control" placeholder="Teléfono" />
-						</div>
-
-						<div class="col-md-8 mb-4">
-							<input type="text" id="template-contactform-subject" name="subject" value="" class="required sm-form-control border-form-control" placeholder="Asunto" />
-						</div>
-
-						<div class="w-100"></div>
-
-						<div class="col-12 mb-4">
-							<textarea class="required sm-form-control border-form-control" id="template-contactform-message" name="template-contactform-message" rows="7" cols="30" placeholder="Tu mensaje"></textarea>
-						</div>
-
-						<div class="col-12 center mb-4">
-							<button class="button button-border button-circle font-weight-medium ml-0 topmargin-sm" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Enviar</button>
-							<br>
-							<small style="display: block; font-size: 13px; margin-top: 15px;">Te responderemos entre las próximas 48hs y  72hs.</small>
-						</div>
-
-						<div class="w-100"></div>
-
-						<input type="hidden" name="prefix" value="template-contactform-">
-
-					</form>
-
-				</div>
-
+							<div class="col-md-6 mb-4">
+								<label for="email"> 
+									<span class="error" id="err-email">please enter e-mail</span>
+									<span class="error" id="err-emailvld">e-mail is not a valid format</span>
+								</label>
+								<input name="email" id="email" type="text"  placeholder="E-Mail: *"/>
+							</div>
+							<div class="clear"></div>
+							<div class="col-md-6 mb-4">
+								<label for="message"></label>
+								<textarea name="message" id="message" placeholder="Tell Us Everything"></textarea>
+							</div>
+							<div class="clear"></div>
+							<div class="col-md-6 mb-4">
+								<div id="button-con"><button class="send_message button-effect button--moema button--text-thick button--text-upper button--size-s" id="send" data-lang="en">submit</button></div>					
+							</div>
+							<div class="clear"></div>	
+							<div class="error text-align-left" id="err-form">There was a problem validating the form please check!</div>
+							<div class="error text-align-left" id="err-timedout">The connection to the server timed out!</div>
+							<div class="error" id="err-state"></div>
+						</form>	
+										
+						<div class="clear"></div>
+						<div id="ajaxsuccess">Successfully sent!!</div>
+						<div class="clear"></div>
+			</div>
 		</div>
 	</div>
 <!-- Form END -->
+
+
 
 <!-- Footer
 	================================================== -->
