--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ﻿<!DOCTYPE html>
 <!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]>
-<!--><html class="no-js" lang="en"><!--<![endif]-->
+<!--><html class="no-js" lang="es"><!--<![endif]-->
 <head>
 
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Pampa.code</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<meta property="og:title" content="The title for your social post entry">
-	<meta property="og:url" content="//yourdomain.com/page-url">
-	<meta property="og:description" content="Description for your link page to share in social networks. If your main description is good, use it">
-	<meta property="og:image" content="//yourdomain.com/image-name.jpg">
+	<title>Pampa.code - Desarollamos soluciones</title>
+	<meta name="description" content="Pampa.code">
+	<meta name="author" content="Pampa.code">
+	<meta property="og:title" content="Pampa.code">
+	<meta property="og:url" content="https://pampacode.com/">
+	<meta property="og:description" content="Somos 💻 Pampa.code 💻 desarrollamos soluciones">
+	<meta property="og:image" content="https://pampacode.com/images/logo-light.png">
 	<meta property="og:type" content="website">
 	<link rel="icon" 
 	type="image/png" 
@@ -405,10 +405,10 @@
 			<div class="two-fifths column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="social-footer">
 					<ul class="list-social-footer">
-						<li class="icon-footer tipped" data-title="twitter"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
-							<a href="#"><span class="fa-twitter"></span></a>
+						<li class="icon-footer tipped" data-title="instagram"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
+							<a href="https://www.instagram.com/pampacode/" target="_blank"><span class="fa-instagram"></span></a>
 						</li>
-						<li class="icon-footer tipped" data-title="github"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
+						<!-- <li class="icon-footer tipped" data-title="github"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
 							<a href="#"><span class="fa-github"></span></a>
 						</li>
 						<li class="icon-footer tipped" data-title="pinterest"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
@@ -416,7 +416,7 @@
 						</li>
 						<li class="icon-footer tipped" data-title="facebook"  data-tipper-options='{"direction":"top","follow":"true","margin":25}'>
 							<a href="#"><span class="fa-facebook"></span></a>
-						</li>
+						</li> -->
 					</ul>	
 				</div>
 			</div>
