--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 						<circle fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" cx="40" cy="29" r="5"/>
 						</svg>							
 					</div>
-					<h6>Seo.</h6>
-					<p>Posicionamos tu sitio con toda la suite de Google</p>
+					<h6>Contenidos</h6>
+					<p>Diseñamos tus ideas con creatividad.</p>
 				</div>
 			</div>
 			<div class="four columns" >
@@ -187,8 +187,8 @@
 						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="55" y1="11" x2="63" y2="11"/>
 						</svg>							
 					</div>
-					<h6>desarrollo</h6>
-					<p>desarrollamos soluciones a tus problemas</p>
+					<h6>Desarrollo</h6>
+					<p>Creamos soluciones en base a tus gustos y necesidades.</p>
 				</div>
 			</div>
 			<div class="four columns" >
@@ -207,8 +207,8 @@
 						<rect x="38" y="25" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="19" height="16"/>
 						</svg>							
 					</div>
-					<h6>diseño web</h6>
-					<p>diseñamos el sitio web que soñas</p>
+					<h6>Posicionamiento SEO/SEM</h6>
+					<p>Aumentamos la visibilidad de tu negocio en todo Internet</p>
 				</div>
 			</div>
 			<div class="clear"></div>
@@ -223,8 +223,8 @@
 							9,3.042 9,9 "/>
 						</svg>							
 					</div>
-					<h6>soporte</h6>
-					<p>comuinicación contaste con nuestro equipo</p>
+					<h6>Comunicación</h6>
+					<p>Diseñamos el Ecosistema Web con tus redes sociales</p>
 				</div>
 			</div>
 			<div class="four columns" >
@@ -242,8 +242,8 @@
 						</g>
 						</svg>						
 					</div>
-					<h6>fotografía</h6>
-					<p>imágenes con calidad y estilo para tus productos</p>
+					<h6>Imágenes</h6>
+					<p>Brindamos imágenes con calidad y estilo para tus productos</p>
 				</div>
 			</div>
 			<div class="four columns" >
