--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
 	
 	<script type="text/javascript" src="js/modernizr.custom.js"></script> 
 	
-	
+	<!-- BEGIN Heat Map -->
+	<script>
+		(function(h,e,a,t,m,p) {
+		m=e.createElement(a);m.async=!0;m.src=t;
+		p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+		})(window,document,'script','https://u.heatmap.it/log.js');
+		</script>
+	<!-- END Heat Map-->
 </head>
 <body class="royal_preloader">	
 	
