actualizacion de portfolio y saque team

--- a/index.html
+++ b/index.html
@@ -95,9 +95,6 @@
 						</ul> -->
 					</li>
 					<li>
-						<a class="shadow-hover" href="#nosotros" data-gal="m_PageScroll2id" data-ps2id-offset="78">Nosotros</a>
-					</li>
-					<li>
 						<a class="shadow-hover" href="#contact" data-gal="m_PageScroll2id" data-ps2id-offset="78">Contacto</a>
 					</li>
 <!-- 					<li>
@@ -125,7 +122,7 @@
 							<b>marketing</b>
 							<b>desarollo</b>
 							<b>posicionamiento</b>
-							<b>tu solución</b>
+							<b>creatividad</b>
 						</span>
 					</h1>
 				</div>
@@ -284,25 +281,13 @@
 				<h5>portfolio</h5>
 			</div>
 		</div>
-		<div class="content-wrap padding-top-bottom content--layout-1">
-			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/arauzvanney.png" alt="Some image" />
-				<h3 class="content__title">Estudio Arauz Vanney</h3>
-				<a href="https://estudioarauzvanney.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
-			</div>
-			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/crego.png" alt="Some image" />
-				<h3 class="content__title">La barbería de Crego</h3>
-				<a href="https://labarberiadecrego.com/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
-			</div>
+		<div class="content-wrap padding-bottom content--layout-1">
 		</div>
 		<div class="content-wrap padding-bottom content--layout-2">
 			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
 				<img class="content__img" src="images/portfolio/vivere.png" alt="Some image" />
-				<h3 class="content__title">Vivere Bene</h3>
+				<h3 class="content__title">Web App: Vivere Bene</h3>
 				<a href="https://viverebene.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
@@ -313,86 +298,33 @@
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-3">
-			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
+			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/cafe.png" alt="Some image" />
-				<h3 class="content__title">Café</h3>
-				<a href="https://cafe-junin.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/vinilo.jpg" alt="Some image" />
+				<h3 class="content__title">Web App: Vinilo Menú</h3>
+				<a href="https://menu-vinilo.herokuapp.com/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/restaurante.png" alt="Some image" />
-				<h3 class="content__title">Restaurante</h3>
-				<a href="https://restaurante-junin.netlify.app/" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/chk.png" alt="Some image" />
+				<h3 class="content__title">Chk DJ</h3>
+				<a href="https://chkjnn.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
 		</div>
 		<div class="content-wrap padding-bottom content--layout-4">
 			<div class="content content--layout" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
 				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/libros.png" alt="Some image" />
-				<h3 class="content__title">Escritor</h3>
-				<a href="https://libreria-junin.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
+				<img class="content__img" src="images/portfolio/crego.png" alt="Some image" />
+				<h3 class="content__title">La Barberia De Crego</h3>
+				<a href="https://labarberiadecrego.com/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
 			</div>
-			<div class="content content--layout mobile-padding" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<div class="content__mask"></div>
-				<img class="content__img" src="images/portfolio/chk.png" alt="Some image" />
-				<h3 class="content__title">DJ</h3>
-				<a href="https://chkjnn.netlify.app/" target="_blank" class="content__link"><svg class="decoshape" width="100%" height="100%" preserveAspectRatio="none"><use xlink:href="#shape"></use></svg><div class="chaffle" data-lang="en">visitar</div></a>
-			</div>
-		</div>
+		</div> 
 		<div class="content--related"></div>
-	</div>
-		
-<!-- Who we are
-	================================================== -->
-	<div class="section-block padding-top" id="nosotros">
-		<div class="container">
-			<div class="twelve columns page-title">
-				<h5>nosotros</h5>
-			</div>
-			<div>
-				<div class="six columns">
-					<div class="team-wrap">
-						<img src="images/santi.jfif" alt="">
-						<p><small>Ing En Sistemas - Fullstack Dev</small></p>
-						<h6>Santiago Corbanini</h6>
-						<div class="social-team">
-							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="instagram"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-									<a href="https://www.instagram.com/santicorbanini/" target="_blank"><span class="fa-instagram"></span></a>
-								</li>
-								<li class="icon-team tipped" data-title="email"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-									<a href="mailto:" target="_blank"><span class="fa-envelope"></span></a>
-								</li>
-							</ul>	
-						</div>
-					</div>
-				</div>
-				<div class="six columns">
-					<div class="team-wrap">
-						<img src="images/fran.jpg" alt="">
-						<p><small>Front-End Dev / UX UI / Motion Graphics</small></p>
-						<h6>Franco Vanney</h6>
-						<div class="social-team">
-							<ul class="list-social-team">
-								<li class="icon-team tipped" data-title="instagram"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-									<a href="https://www.instagram.com/francovanney/" target="_blank"><span class="fa-instagram"></span></a>
-								</li>
-								<li class="icon-team tipped" data-title="vimeo"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-									<a href="https://vimeo.com/francoavanney" target="_blank"><span class="fa-vimeo"></span></a>
-								</li>
-								<li class="icon-team tipped" data-title="email"  data-tipper-options='{"direction":"bottom","follow":"true","margin":25}'>
-									<a href="mailto:francoavanney@gmail.com" target="_blank"><span class="fa-envelope"></span></a>
-								</li>
-							</ul>	
-						</div>
-					</div>
-				</div>
-		</div>	
-	</div>
 
+
+	</div>
 <!-- Form -->
-	<div class="section-block padding-top">
+	<div class="section-block">
 		<div class="container">
 
 			<div class="twelve columns page-title">
@@ -449,7 +381,7 @@
 				<p>pampa.code - 2022</p>
 			</div>
 			<div class="one-fifth column" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
-				<p>Junín, BA</p>
+				<p>Buenos Aires</p>
 				<p>Argentina</p>
 			</div>
 			<div class="one-fifth column mail-phone" data-scroll-reveal="enter bottom move 60px over 0.9s after 0.1s">
